@@ -53,8 +53,6 @@ typedef std::set<Component> ComponentSet;
 template<typename ComponentGraphIntOrRest>
 void topologicalSortComponents(const ComponentGraphIntOrRest& cg, ComponentContainer& out);
 
-
-
 struct BuildCommand
 {
 	// components to collapse to unit
@@ -70,23 +68,6 @@ void executeBuildCommands(const CommandVector& commands, EvalGraphBuilder& build
 
 namespace evalheur
 {
-
-void executeBuildCommands(const CommandVector& commands, EvalGraphBuilder& builder)
-{
-  const ComponentGraph& compgraph = builder.getComponentGraph();
-
-  // collapse according to commands
-  BOOST_FOREACH(const BuildCommand& cmd, commands)
-  {
-    LOG(ANALYZE,"BuildCommand collapses components " <<
-				printvector(cmd.collapse) <<
-				" and shared components " << printvector(cmd.share));
-		std::list<Component> comps(cmd.collapse.begin(), cmd.collapse.end());
-		std::list<Component> ccomps(cmd.share.begin(), cmd.share.end());
-		EvalGraphBuilder::EvalUnit u = builder.createEvalUnit(comps, ccomps);
-		LOG(ANALYZE,"yields eval unit " << u);
-  }
-}
 
 // we need a hash map, as component graph is no graph with vecS-storage
 typedef boost::unordered_map<Component, boost::default_color_type> CompColorHashMap;
